SocioDim calculate Eigenvalues and modularity using tensorflow

--- a/SocioDim.ipynb
+++ b/SocioDim.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import libraries and external notebooks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,13 +16,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing Jupyter notebook from /media/santaris/HighSpeedStorage/LabsWorkspace/Notebooks/LocalityGroups/Graph Representation Learning/Matrix Factorization/SocioDim/datasets/Downloader.ipynb\n"
+      "importing Jupyter notebook from /media/santaris/HighSpeedStorage/LabsWorkspace/Notebooks/LocalityGroups/Graph Representation Learning/Matrix Factorization/SocioDim/datasets/Downloader.ipynb\n",
+      "Version:  2.0.0\n",
+      "Eager mode:  True\n",
+      "GPU is available\n"
      ]
     }
    ],
    "source": [
     "import import_ipynb\n",
-    "from datasets.Downloader import *"
+    "from datasets.Downloader import *\n",
+    "\n",
+    "import pandas as pd\n",
+    "import networkx as nx\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import math\n",
+    "from numpy import linalg as LA\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, Model\n",
+    "import tensorflow.keras.backend as K\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from IPython import display\n",
+    "print(\"Version: \", tf.__version__)\n",
+    "print(\"Eager mode: \", tf.executing_eagerly())\n",
+    "print(\"GPU is\", \"available\" if tf.config.experimental.list_physical_devices(\"GPU\") else \"NOT AVAILABLE\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download datasets"
    ]
   },
   {
@@ -34,12 +67,219 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "datasets/BlogCatalog-dataset.zip: 100%|##########| 954k/954k [00:04<00:00, 204kB/s]  \n"
+      "datasets/BlogCatalog-dataset.zip: 100%|##########| 954k/954k [00:04<00:00, 200kB/s]  \n"
      ]
     }
    ],
    "source": [
-    "download_dataset('http://socialcomputing.asu.edu/uploads/1283153973/BlogCatalog-dataset.zip', 'datasets/BlogCatalog-dataset.zip', 'datasets')"
+    "download_dataset('http://socialcomputing.asu.edu/uploads/1283153973/BlogCatalog-dataset.zip', 'datasets/BlogCatalog-dataset.zip', 'datasets')\n",
+    "# download_dataset('http://socialcomputing.asu.edu/uploads/1283157931/Flickr-dataset.zip', 'datasets/Flickr-dataset.zip', 'datasets')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = nx.read_edgelist('datasets/BlogCatalog-dataset/data/edges.csv', delimiter=',', nodetype=int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of nodes 10312\n",
+      "Number of edges 333983\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of nodes {G.number_of_nodes()}\")\n",
+    "print(f\"Number of edges {G.number_of_edges()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adj_matrix = nx.adjacency_matrix(G)\n",
+    "dense_matrix = np.array(adj_matrix.toarray(),dtype=np.float64)\n",
+    "adj_tensor = tf.constant(dense_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = pd.read_csv('datasets/BlogCatalog-dataset/data/group-edges.csv', sep=',', names=['Node','Group'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Node</th>\n",
+       "      <th>Group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>36</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>84</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Node  Group\n",
+       "0    28      1\n",
+       "1    32      1\n",
+       "2    36      1\n",
+       "3    37      1\n",
+       "4    84      1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorized_labels = np.zeros((G.number_of_nodes(), 39), dtype=int)\n",
+    "for index, row in labels.iterrows():\n",
+    "    node = row['Node']\n",
+    "    group = int(row['Group'])\n",
+    "    vectorized_labels[node - 1][group - 1] = 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 1. Extract Latent social dimensions based on network connectivity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def modularity(adj_matrix):\n",
+    "    \n",
+    "    # Degrees of nodes\n",
+    "    d = tf.reduce_sum(adj_matrix, 1)\n",
+    "    \n",
+    "    two_m = tf.reduce_sum(d)\n",
+    "    \n",
+    "    nom = tf.math.multiply(tf.transpose(d), d)\n",
+    "    \n",
+    "    B = tf.math.subtract(adj_matrix, tf.math.divide(nom, two_m))\n",
+    "    \n",
+    "    e,v = tf.linalg.eigh(B)\n",
+    "        \n",
+    "    return e,v\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w, v = modularity(adj_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([10312, 10312])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v.shape"
    ]
   },
   {
@@ -47,7 +287,70 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v_latent = []\n",
+    "for i in range(500):\n",
+    "    v_latent.append(v[:][ind[i]])\n",
+    "V = np.array(np.transpose(v_latent))\n",
+    "V.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlp = MLPClassifier(verbose=0,solver='adam', learning_rate='adaptive',hidden_layer_sizes=5000, max_iter=1000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indexes = np.arange(G.number_of_nodes())\n",
+    "np.random.shuffle(indexes)\n",
+    "training_indexes = math.floor(G.number_of_nodes() * 0.1)\n",
+    "training_nodes = indexes[:training_indexes]\n",
+    "testing_nodes = indexes[training_indexes+1:]\n",
+    "training_nodes.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = []\n",
+    "Y = []\n",
+    "for node in training_nodes:\n",
+    "    X.append(V[node - 1].real)\n",
+    "    Y.append(vectorized_labels[node - 1])\n",
+    "    \n",
+    "\n",
+    "X_train = np.array(X)\n",
+    "Y_train = np.array(Y)\n",
+    "\n",
+    "X = []\n",
+    "Y = []\n",
+    "for node in testing_nodes:\n",
+    "    X.append(V[node - 1].real)\n",
+    "    Y.append(vectorized_labels[node - 1])\n",
+    "X_train.shape\n",
+    "\n",
+    "X_test = np.array(X)\n",
+    "Y_test = np.array(Y)"
+   ]
   }
  ],
  "metadata": {
