Completed discriminative classifier and evaluation

--- a/SocioDim.ipynb
+++ b/SocioDim.ipynb
@@ -35,6 +35,7 @@
     "from numpy import linalg as LA\n",
     "\n",
     "import tensorflow as tf\n",
+    "import tensorflow_addons as tfa\n",
     "from tensorflow.keras import layers, Model\n",
     "import tensorflow.keras.backend as K\n",
     "from sklearn.neural_network import MLPClassifier\n",
@@ -67,7 +68,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "datasets/BlogCatalog-dataset.zip: 100%|##########| 954k/954k [00:04<00:00, 200kB/s]  \n"
+      "datasets/BlogCatalog-dataset.zip: 100%|##########| 954k/954k [00:05<00:00, 193kB/s]  \n"
      ]
     }
    ],
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,93 +265,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TensorShape([10312, 10312])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "v.shape"
+    "eigs_sort = tf.argsort(w, direction='DESCENDING')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "v_latent = []\n",
     "for i in range(500):\n",
-    "    v_latent.append(v[:][ind[i]])\n",
-    "V = np.array(np.transpose(v_latent))\n",
-    "V.shape"
+    "    v_latent.append(v[:][eigs_sort[i]].numpy())\n",
+    "v_latent = np.array(np.transpose(v_latent), dtype=np.float64)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluate"
+    "# Step 2 Construct Discriminative Classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlp = MLPClassifier(verbose=0,solver='adam', learning_rate='adaptive',hidden_layer_sizes=5000, max_iter=1000)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "indexes = np.arange(G.number_of_nodes())\n",
-    "np.random.shuffle(indexes)\n",
-    "training_indexes = math.floor(G.number_of_nodes() * 0.1)\n",
-    "training_nodes = indexes[:training_indexes]\n",
-    "testing_nodes = indexes[training_indexes+1:]\n",
-    "training_nodes.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = []\n",
-    "Y = []\n",
-    "for node in training_nodes:\n",
-    "    X.append(V[node - 1].real)\n",
-    "    Y.append(vectorized_labels[node - 1])\n",
+    "def construct_Train_Test_Sets(ratio=0.1):\n",
+    "    indexes = np.arange(G.number_of_nodes())\n",
+    "    np.random.shuffle(indexes)\n",
+    "    training_indexes = math.floor(G.number_of_nodes() * ratio)\n",
+    "    training_nodes = indexes[:training_indexes]\n",
+    "    testing_nodes = indexes[training_indexes+1:]\n",
     "    \n",
+    "    X = []\n",
+    "    Y = []\n",
+    "    for node in training_nodes:\n",
+    "        X.append(v_latent[node - 1])\n",
+    "        Y.append(vectorized_labels[node - 1])\n",
     "\n",
-    "X_train = np.array(X)\n",
-    "Y_train = np.array(Y)\n",
     "\n",
-    "X = []\n",
-    "Y = []\n",
-    "for node in testing_nodes:\n",
-    "    X.append(V[node - 1].real)\n",
-    "    Y.append(vectorized_labels[node - 1])\n",
-    "X_train.shape\n",
+    "    X_train = np.array(X)\n",
+    "    X_train_tensor = tf.constant(X_train)\n",
+    "    Y_train = np.array(Y)\n",
+    "    Y_train_tensor = tf.constant(Y_train)\n",
     "\n",
-    "X_test = np.array(X)\n",
-    "Y_test = np.array(Y)"
+    "    X = []\n",
+    "    Y = []\n",
+    "    for node in testing_nodes:\n",
+    "        X.append(v_latent[node - 1].real)\n",
+    "        Y.append(vectorized_labels[node - 1])\n",
+    "    X_train.shape\n",
+    "\n",
+    "    X_test = np.array(X)\n",
+    "    X_test_tensor = tf.constant(X_test)\n",
+    "    Y_test = np.array(Y)\n",
+    "    Y_test_tensor = tf.constant(Y_test)\n",
+    "    \n",
+    "    return X_train_tensor, Y_train_tensor, X_test_tensor, Y_test_tensor\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def constructModel():\n",
+    "    model = tf.keras.Sequential()\n",
+    "    # Adds a densely-connected layer with 64 units to the model:\n",
+    "    model.add(layers.Dense(1000, activation='relu'))\n",
+    "    \n",
+    "    model.add(layers.Dense(1000, activation='relu'))\n",
+    "\n",
+    "    # Add a sigmoid layer with 10 output units:\n",
+    "    model.add(layers.Dense(39, activation='sigmoid', kernel_regularizer=tf.keras.regularizers.l2(1e-4)))\n",
+    "    \n",
+    "    model.compile(optimizer=tf.keras.optimizers.Adam(0.01),\n",
+    "              loss='binary_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 3 Evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ratio 0.1: Micro-F1 (%) 0.055673837661743164: Macro-F1 (%) 0.055673837661743164\n",
+      "Ratio 0.2: Micro-F1 (%) 0.03856603056192398: Macro-F1 (%) 0.03856603056192398\n",
+      "Ratio 0.30000000000000004: Micro-F1 (%) 0.0350453145802021: Macro-F1 (%) 0.0350453145802021\n",
+      "Ratio 0.4: Micro-F1 (%) 0.042208634316921234: Macro-F1 (%) 0.042208634316921234\n",
+      "Ratio 0.5: Micro-F1 (%) 0.04339886084198952: Macro-F1 (%) 0.04339886084198952\n",
+      "Ratio 0.6: Micro-F1 (%) 0.03641679883003235: Macro-F1 (%) 0.03641679883003235\n",
+      "Ratio 0.7000000000000001: Micro-F1 (%) 0.039753735065460205: Macro-F1 (%) 0.039753735065460205\n",
+      "Ratio 0.8: Micro-F1 (%) 0.04753199219703674: Macro-F1 (%) 0.04753199219703674\n",
+      "Ratio 0.9: Micro-F1 (%) 0.03729355335235596: Macro-F1 (%) 0.03729355335235596\n"
+     ]
+    }
+   ],
+   "source": [
+    "micro_f1 = []\n",
+    "macro_f1 = []\n",
+    "for ratio in np.arange(0.1, 1, 0.1):\n",
+    "    \n",
+    "    X_train, Y_train, X_test, Y_test = construct_Train_Test_Sets(ratio)\n",
+    "    \n",
+    "    model = constructModel()\n",
+    "    \n",
+    "    model.fit(X_train, Y_train, epochs=100, batch_size=64, verbose=0)\n",
+    "    \n",
+    "    predict = model.predict(X_test)\n",
+    "    predic_tensor = tf.constant(predict)\n",
+    "    condition = tf.math.greater_equal(predic_tensor, 0.5)\n",
+    "    bool_predictions = tf.where(condition, 1, 0)\n",
+    "    \n",
+    "    output_macro = tfa.metrics.F1Score(num_classes=39, average='macro')\n",
+    "    output_macro.update_state(Y_test, bool_predictions)\n",
+    "    \n",
+    "    macro_f1.append(output_macro.result().numpy())\n",
+    "    \n",
+    "    output_micro = tfa.metrics.F1Score(num_classes=39, average='micro')\n",
+    "    output_micro.update_state(Y_test, bool_predictions)\n",
+    "    \n",
+    "    micro_f1.append(output_micro.result().numpy())\n",
+    "    \n",
+    "    print(\"Ratio {}: Micro-F1 (%) {}: Macro-F1 (%) {}\".format(ratio, output_micro.result().numpy(), output_micro.result().numpy()))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
